comment cleanup